# obcx-plugin-template

./: .gitignore  CMakeLists.txt  README.md  plugin.toml
src/: example_plugin.cpp  example_plugin.hpp
